--- a/master/Vagrantfile
+++ b/master/Vagrantfile
@@ -4,13 +4,13 @@
 Vagrant.configure("2") do |config|
 
   config.vm.define "master" do |master|
-    master.vm.box = "centos/8"
+    master.vm.box = "generic/centos8s"
     master.vm.hostname = "master"
     master.vm.network :private_network, ip: "192.168.10.50"
     master.vm.provider "virtualbox" do |v|
       v.customize ["modifyvm", :id, "--ioapic", "on"]
       v.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
-      v.customize ["modifyvm", :id, "--name", "tower"]
+      v.customize ["modifyvm", :id, "--name", "AWX"]
       v.customize ["modifyvm", :id, "--memory", 6144]
       v.customize ["modifyvm", :id, "--cpus", 2]
    end
